<resources>
    <string name="app_name">Note</string>
    <string name="dow">День недели:</string>
    <string name="enter_title">Введите заголовок</string>
    <string name="enter_desc">Введите описание</string>
    <string name="priority1">1</string>
    <string name="priority2">2</string>
    <string name="priority3">3</string>
    <string name="save_note">Сохранить заметку</string>
    <string name="notes">notes</string>
    <string name="isEmpty">Все поля должны быть заполнены!</string>
    <string-array name="dow">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
</resources>